--- a/data/StyleSheet.css
+++ b/data/StyleSheet.css
@@ -1,10 +1,8 @@
 .btn-group {
     float: left;
-    border-color: black;
     width : 150px;
     height :100%;
     background-color: #00183f;
-    border-right: 1px solid black;
     display:inline-block;
     position:fixed;
 }
@@ -31,20 +29,39 @@
     padding:10px;
     display:inline-block;
     background-color: white;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .ranking{
     border: 1px solid #6a6a6a;
     margin-left: 150px;
     padding:10px;
     background-color: white;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .rankingFinal{
     border: 1px solid #6a6a6a;
     margin-left: 150px;
     padding:10px;
     background-color: white;
+    font-family:Arial, Helvetica, sans-serif;
+}
+.topBar{
+    width:100%;
+    height:60px;
+    background-color: #324765;
+    color: white;
+    text-indent: 160px;
+    font-size: 40px;
+    font-family:Impact, Charcoal, sans-serif;
+    padding-top: 10px;
+}
+img{
+    width:30%;
+    height:30%;
+    padding:10px;
 }
 html, body{
     background-color: slategrey;
     padding:0;
+    margin:0;
 }
