--- a/data/StyleSheet.css
+++ b/data/StyleSheet.css
@@ -26,7 +26,7 @@
 .article {
     border: 1px solid #6a6a6a;
     margin-left: 150px;
-    padding:10px;
+    padding:70px;
     display:inline-block;
     background-color: white;
     font-family:Arial, Helvetica, sans-serif;
@@ -34,14 +34,14 @@
 .ranking{
     border: 1px solid #6a6a6a;
     margin-left: 150px;
-    padding:10px;
+    padding:70px;
     background-color: white;
     font-family:Arial, Helvetica, sans-serif;
 }
 .rankingFinal{
     border: 1px solid #6a6a6a;
     margin-left: 150px;
-    padding:10px;
+    padding:70px;
     background-color: white;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -54,6 +54,7 @@
     font-size: 40px;
     font-family:Impact, Charcoal, sans-serif;
     padding-top: 10px;
+    position:fixed;
 }
 img{
     width:30%;
